Fix textbox width in Firefox so no horizontal scroll

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -373,6 +373,7 @@ h1.expandable {
   display: flex;
   border: 2px solid $arc_border;
   border-radius: 3px;
+  width: calc(100% - 4px);
   input {
     border: 0;
     margin-top: 0;
@@ -381,17 +382,22 @@ h1.expandable {
   }
 }
 
+#sponsorBox,
+#voucherBox {
+  font-weight: bold;
+  padding: 0;
+}
+
 #sponsorBox {
   justify-content: flex-start;
   background-color: $arc_gray;
-  width: 30%;
-  font-weight: bold;
+  width: 35%;
 }
 
 #voucherBox {
   justify-content: flex-end;
   text-transform: uppercase;
-  width: 70%;
+  width: 65%;
 }
 
 #voucherNumber {
